--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "microverse-portfolio-project",
   "version": "1.0.0",
-  "description": "",
+  "description": "<a name=\"readme-top\"></a>",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -16,5 +16,12 @@
   "bugs": {
     "url": "https://github.com/mwismann/microverse-portfolio-project/issues"
   },
-  "homepage": "https://github.com/mwismann/microverse-portfolio-project#readme"
+  "homepage": "https://github.com/mwismann/microverse-portfolio-project#readme",
+  "devDependencies": {
+    "hint": "^7.1.3",
+    "stylelint": "^13.13.1",
+    "stylelint-config-standard": "^21.0.0",
+    "stylelint-csstree-validator": "^1.9.0",
+    "stylelint-scss": "^3.21.0"
+  }
 }
